<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.iakull.fithelper.ui.profile.edit_profile.EditProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@tools:sample/full_names" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/frame_padding"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/training_target">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.trainingTarget}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="похудеть" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/height">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.height}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/height" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/weightkg">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.weight}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/weightkg" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:text="@string/save_changes"
                app:cornerRadius="16dp" />

            <Button
                android:id="@+id/delProfileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:backgroundTint="#F44336"
                android:text="@string/del_account"
                app:cornerRadius="16dp" />

        </LinearLayout>

    </ScrollView>

</layout>