<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    app:startDestination="@id/profileFragment">
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.iakull.fithelper.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/to_editPassFragment"
            app:destination="@id/editPassFragment" />

    </fragment>
    <fragment
        android:id="@+id/editPassFragment"
        android:name="com.iakull.fithelper.ui.profile.edit_profile.EditPassFragment"
        android:label="@string/pass_editing"
        tools:layout="@layout/fragment_edit_pass" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.iakull.fithelper.ui.profile.edit_profile.EditProfileFragment"
        android:label="@string/profile_editing"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>