<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/cur_pass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/cur_pass" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/new_pass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/pass" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:hint="@string/new_pass_again">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="@string/pass" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_padding"
                android:text="@string/save_changes"
                app:cornerRadius="16dp" />

        </LinearLayout>
    </ScrollView>
</layout>