<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.iakull.fithelper.ui.common.detailed_exercise.DetailedExerciseViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_padding">

            <TextView
                android:id="@+id/exercise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@{vm.exercise.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/exercise_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:imageUrl="@{vm.exercise.imageUrl}"
                    tools:src="@tools:sample/backgrounds/scenic"/>

            </LinearLayout>

            <TextView
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/targeted_muscles"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@{vm.targetedMuscles}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@string/targeted_muscles" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@{vm.exercise.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:text="@string/description" />

        </LinearLayout>

    </ScrollView>

</layout>